--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,21 +4,30 @@ body{
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.blurryText {
+a:hover{
 	color: transparent;
-	text-shadow: 0 0 5px rgba(42, 172, 204, 0.8);
+	text-shadow: 0 0 10px rgba(0, 26, 255, 0.8);
+}
+
+#titleContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 #titleBox {
     border-radius: 20px;
     border: 2px solid #ffffff;
-    padding: 5px;
     width: 120px;
     height: 50px;
     color: #ffffff;
     text-align: center;
-    margin-bottom: 25px;
     text-decoration: none;
+}
+
+#titleBox:hover{
+    border: 2px solid #ffd829;
 }
 
 a{
@@ -34,6 +43,8 @@ a{
     display: flex;
     justify-content: space-around;
     align-self: flex-end;
+    width: 100%;
+    height: 100%;
 }
 
 .roundButtons{
@@ -48,11 +59,24 @@ a{
     cursor: pointer;
     text-decoration: none;
 }
+
+.roundButtons:hover{
+    border: 2px solid #ffd829;
+    transform: rotate(0.02turn);
+}
+
 .containerdeux{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     align-self: flex-end;
+    flex-direction: column;
+    height: 450px;
+    width: auto;
 }
+
+
+
 .roundTextCase{
     height: 300px;
     width: 250px;
@@ -60,8 +84,12 @@ a{
     color: #ffffff;
     border-radius: 5%;
     display: flex;
-    margin-top: 25px;
+    margin-top: 7%;
     text-decoration: none;
+}
+
+.marginlilright{
+    margin-right: 5%;
 }
 
 .marginlilleft{
@@ -91,12 +119,17 @@ a{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 10%;
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    border-radius: 5%;
+    width: 360px;
+    height: 205px;
+    text-align: center;
 }
 
 #infoContainer{
-    width: 125px;
-    font-size: large;
+    width: 155px;
+    font-size: larger;
 }
 
 .left{ 
@@ -107,8 +140,38 @@ a{
     margin-left: 5%;
 }
 
-
-
 .bigFont{
     font-size: large;
+}
+
+.fade-in {
+    animation: fadeIn ease 2s;
+    -webkit-animation: fadeIn ease 2s;
+    -moz-animation: fadeIn ease 2s;
+    -o-animation: fadeIn ease 2s;
+    -ms-animation: fadeIn ease 2s;
+}
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-o-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+    
+@-ms-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
 }
